Lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> prog line es
Rule 2     prog -> prog fdecl es
Rule 3     prog -> <empty>
Rule 4     es -> es es
Rule 5     es -> ES
Rule 6     line -> sent
Rule 7     line -> logic
Rule 8     line -> fcall
Rule 9     line -> decl
Rule 10    line -> cdecl
Rule 11    line -> group
Rule 12    line -> <empty>
Rule 13    sent -> PRINT ID
Rule 14    sent -> ID EQ expr
Rule 15    sent -> access EQ expr
Rule 16    sent -> EXTEND1 ID expr
Rule 17    sent -> EXTEND2 ID expr expr
Rule 18    sent -> expr
Rule 19    sent -> UNDO
Rule 20    group -> FOPEN lines line FCLOSE
Rule 21    group -> FOPEN lines FCLOSE
Rule 22    lines -> lines line es
Rule 23    lines -> <empty>
Rule 24    decl -> 2ldecl
Rule 25    decl -> 2adecl
Rule 26    decl -> 1ldecl
Rule 27    decl -> 1adecl
Rule 28    decl -> lvdecl
Rule 29    decl -> avdecl
Rule 30    cdecl -> cldecl
Rule 31    cdecl -> cadecl
Rule 32    cldecl -> CLVAR ID EQ expr
Rule 33    cadecl -> CAVAR ID EQ expr
Rule 34    lvdecl -> LVAR ID
Rule 35    lvdecl -> LVAR ID EQ expr
Rule 36    avdecl -> AVAR ID
Rule 37    avdecl -> AVAR ID EQ expr
Rule 38    1ldecl -> L1ARR ID
Rule 39    1ldecl -> L1ARR ID EQ SOPEN vals SCLOSE
Rule 40    1adecl -> A1ARR ID
Rule 41    1adecl -> A1ARR ID EQ SOPEN vals SCLOSE
Rule 42    2ldecl -> L2ARR ID
Rule 43    2ldecl -> L2ARR ID EQ SOPEN arrs SCLOSE
Rule 44    2adecl -> A2ARR ID
Rule 45    2adecl -> A2ARR ID EQ SOPEN arrs SCLOSE
Rule 46    vals -> expr COMA vals
Rule 47    vals -> expr
Rule 48    arrs -> vals COMD arrs
Rule 49    arrs -> COMD arrs
Rule 50    arrs -> vals
Rule 51    arrs -> <empty>
Rule 52    fdecl -> fovars FUNCTION ID fivars group
Rule 53    fovars -> ID EQ expr
Rule 54    fovars -> SOPEN fvars SCLOSE
Rule 55    fivars -> OPEN fvars CLOSE
Rule 56    fvars -> ID EQ expr
Rule 57    fvars -> ID EQ expr COMA fvars
Rule 58    fvars -> <empty>
Rule 59    expr -> oper
Rule 60    expr -> ACONST
Rule 61    expr -> LCONST
Rule 62    expr -> ID
Rule 63    expr -> NOT expr
Rule 64    expr -> INCDEC expr
Rule 65    expr -> expr GTLT expr
Rule 66    expr -> expr OR expr
Rule 67    expr -> OPEN expr CLOSE
Rule 68    oper -> MOVE
Rule 69    oper -> GET
Rule 70    oper -> PUSH
Rule 71    oper -> SIZE1 ID
Rule 72    oper -> SIZE2 ID expr
Rule 73    oper -> access
Rule 74    access -> ID OPEN expr COMA expr CLOSE
Rule 75    access -> ID OPEN expr CLOSE
Rule 76    logic -> cond
Rule 77    logic -> loop
Rule 78    cond -> IF expr sent else
Rule 79    cond -> IF expr group else
Rule 80    else -> ELSE sent
Rule 81    else -> ELSE group
Rule 82    else -> <empty>
Rule 83    loop -> WHILE expr DO sent
Rule 84    loop -> WHILE expr DO group
Rule 85    fcall -> SOPEN vars SCLOSE EQ ID OPEN pars CLOSE
Rule 86    vars -> ID COMA vars
Rule 87    vars -> COMA vars
Rule 88    vars -> access COMA vars
Rule 89    vars -> access
Rule 90    vars -> ID
Rule 91    vars -> <empty>
Rule 92    pars -> expr COMA pars
Rule 93    pars -> COMA pars
Rule 94    pars -> expr
Rule 95    pars -> <empty>

Terminals, with rules where they appear

A1ARR                : 40 41
A2ARR                : 44 45
ACONST               : 60
AVAR                 : 36 37
CAVAR                : 33
CLOSE                : 55 67 74 75 85
CLVAR                : 32
COMA                 : 46 57 74 86 87 88 92 93
COMD                 : 48 49
DO                   : 83 84
ELSE                 : 80 81
EQ                   : 14 15 32 33 35 37 39 41 43 45 53 56 57 85
ES                   : 5
EXTEND1              : 16
EXTEND2              : 17
FCLOSE               : 20 21
FOPEN                : 20 21
FUNCTION             : 52
GET                  : 69
GTLT                 : 65
ID                   : 13 14 16 17 32 33 34 35 36 37 38 39 40 41 42 43 44 45 52 53 56 57 62 71 72 74 75 85 86 90
IF                   : 78 79
INCDEC               : 64
L1ARR                : 38 39
L2ARR                : 42 43
LCONST               : 61
LVAR                 : 34 35
MOVE                 : 68
NOT                  : 63
OPEN                 : 55 67 74 75 85
OR                   : 66
PRINT                : 13
PUSH                 : 70
SCLOSE               : 39 41 43 45 54 85
SIZE1                : 71
SIZE2                : 72
SOPEN                : 39 41 43 45 54 85
UNDO                 : 19
WHILE                : 83 84
error                : 

Nonterminals, with rules where they appear

1adecl               : 27
1ldecl               : 26
2adecl               : 25
2ldecl               : 24
access               : 15 73 88 89
arrs                 : 43 45 48 49
avdecl               : 29
cadecl               : 31
cdecl                : 10
cldecl               : 30
cond                 : 76
decl                 : 9
else                 : 78 79
es                   : 1 2 4 4 22
expr                 : 14 15 16 17 17 18 32 33 35 37 46 47 53 56 57 63 64 65 65 66 66 67 72 74 74 75 78 79 83 84 92 94
fcall                : 8
fdecl                : 2
fivars               : 52
fovars               : 52
fvars                : 54 55 57
group                : 11 52 79 81 84
line                 : 1 20 22
lines                : 20 21 22
logic                : 7
loop                 : 77
lvdecl               : 28
oper                 : 59
pars                 : 85 92 93
prog                 : 1 2 0
sent                 : 6 78 80 83
vals                 : 39 41 46 48 50
vars                 : 85 86 87 88

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . prog line es
    (2) prog -> . prog fdecl es
    (3) prog -> .

    PRINT           reduce using rule 3 (prog -> .)
    ID              reduce using rule 3 (prog -> .)
    EXTEND1         reduce using rule 3 (prog -> .)
    EXTEND2         reduce using rule 3 (prog -> .)
    UNDO            reduce using rule 3 (prog -> .)
    SOPEN           reduce using rule 3 (prog -> .)
    FOPEN           reduce using rule 3 (prog -> .)
    ACONST          reduce using rule 3 (prog -> .)
    LCONST          reduce using rule 3 (prog -> .)
    NOT             reduce using rule 3 (prog -> .)
    INCDEC          reduce using rule 3 (prog -> .)
    OPEN            reduce using rule 3 (prog -> .)
    IF              reduce using rule 3 (prog -> .)
    WHILE           reduce using rule 3 (prog -> .)
    L2ARR           reduce using rule 3 (prog -> .)
    A2ARR           reduce using rule 3 (prog -> .)
    L1ARR           reduce using rule 3 (prog -> .)
    A1ARR           reduce using rule 3 (prog -> .)
    LVAR            reduce using rule 3 (prog -> .)
    AVAR            reduce using rule 3 (prog -> .)
    CLVAR           reduce using rule 3 (prog -> .)
    CAVAR           reduce using rule 3 (prog -> .)
    MOVE            reduce using rule 3 (prog -> .)
    GET             reduce using rule 3 (prog -> .)
    PUSH            reduce using rule 3 (prog -> .)
    SIZE1           reduce using rule 3 (prog -> .)
    SIZE2           reduce using rule 3 (prog -> .)
    $end            reduce using rule 3 (prog -> .)
    ES              reduce using rule 3 (prog -> .)

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .
    (1) prog -> prog . line es
    (2) prog -> prog . fdecl es
    (6) line -> . sent
    (7) line -> . logic
    (8) line -> . fcall
    (9) line -> . decl
    (10) line -> . cdecl
    (11) line -> . group
    (12) line -> .
    (52) fdecl -> . fovars FUNCTION ID fivars group
    (13) sent -> . PRINT ID
    (14) sent -> . ID EQ expr
    (15) sent -> . access EQ expr
    (16) sent -> . EXTEND1 ID expr
    (17) sent -> . EXTEND2 ID expr expr
    (18) sent -> . expr
    (19) sent -> . UNDO
    (76) logic -> . cond
    (77) logic -> . loop
    (85) fcall -> . SOPEN vars SCLOSE EQ ID OPEN pars CLOSE
    (24) decl -> . 2ldecl
    (25) decl -> . 2adecl
    (26) decl -> . 1ldecl
    (27) decl -> . 1adecl
    (28) decl -> . lvdecl
    (29) decl -> . avdecl
    (30) cdecl -> . cldecl
    (31) cdecl -> . cadecl
    (20) group -> . FOPEN lines line FCLOSE
    (21) group -> . FOPEN lines FCLOSE
    (53) fovars -> . ID EQ expr
    (54) fovars -> . SOPEN fvars SCLOSE
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (78) cond -> . IF expr sent else
    (79) cond -> . IF expr group else
    (83) loop -> . WHILE expr DO sent
    (84) loop -> . WHILE expr DO group
    (42) 2ldecl -> . L2ARR ID
    (43) 2ldecl -> . L2ARR ID EQ SOPEN arrs SCLOSE
    (44) 2adecl -> . A2ARR ID
    (45) 2adecl -> . A2ARR ID EQ SOPEN arrs SCLOSE
    (38) 1ldecl -> . L1ARR ID
    (39) 1ldecl -> . L1ARR ID EQ SOPEN vals SCLOSE
    (40) 1adecl -> . A1ARR ID
    (41) 1adecl -> . A1ARR ID EQ SOPEN vals SCLOSE
    (34) lvdecl -> . LVAR ID
    (35) lvdecl -> . LVAR ID EQ expr
    (36) avdecl -> . AVAR ID
    (37) avdecl -> . AVAR ID EQ expr
    (32) cldecl -> . CLVAR ID EQ expr
    (33) cadecl -> . CAVAR ID EQ expr
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access

    ES              reduce using rule 12 (line -> .)
    PRINT           shift and go to state 12
    ID              shift and go to state 11
    EXTEND1         shift and go to state 15
    EXTEND2         shift and go to state 16
    UNDO            shift and go to state 17
    SOPEN           shift and go to state 20
    FOPEN           shift and go to state 30
    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    L2ARR           shift and go to state 38
    A2ARR           shift and go to state 39
    L1ARR           shift and go to state 40
    A1ARR           shift and go to state 41
    LVAR            shift and go to state 42
    AVAR            shift and go to state 43
    CLVAR           shift and go to state 44
    CAVAR           shift and go to state 45
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    line                           shift and go to state 2
    fdecl                          shift and go to state 3
    sent                           shift and go to state 4
    logic                          shift and go to state 5
    fcall                          shift and go to state 6
    decl                           shift and go to state 7
    cdecl                          shift and go to state 8
    group                          shift and go to state 9
    fovars                         shift and go to state 10
    expr                           shift and go to state 13
    access                         shift and go to state 14
    cond                           shift and go to state 18
    loop                           shift and go to state 19
    2ldecl                         shift and go to state 22
    2adecl                         shift and go to state 23
    1ldecl                         shift and go to state 24
    1adecl                         shift and go to state 25
    lvdecl                         shift and go to state 26
    avdecl                         shift and go to state 27
    cldecl                         shift and go to state 28
    cadecl                         shift and go to state 29
    oper                           shift and go to state 31

state 2

    (1) prog -> prog line . es
    (4) es -> . es es
    (5) es -> . ES

    ES              shift and go to state 52

    es                             shift and go to state 51

state 3

    (2) prog -> prog fdecl . es
    (4) es -> . es es
    (5) es -> . ES

    ES              shift and go to state 52

    es                             shift and go to state 53

state 4

    (6) line -> sent .

    ES              reduce using rule 6 (line -> sent .)
    FCLOSE          reduce using rule 6 (line -> sent .)


state 5

    (7) line -> logic .

    ES              reduce using rule 7 (line -> logic .)
    FCLOSE          reduce using rule 7 (line -> logic .)


state 6

    (8) line -> fcall .

    ES              reduce using rule 8 (line -> fcall .)
    FCLOSE          reduce using rule 8 (line -> fcall .)


state 7

    (9) line -> decl .

    ES              reduce using rule 9 (line -> decl .)
    FCLOSE          reduce using rule 9 (line -> decl .)


state 8

    (10) line -> cdecl .

    ES              reduce using rule 10 (line -> cdecl .)
    FCLOSE          reduce using rule 10 (line -> cdecl .)


state 9

    (11) line -> group .

    ES              reduce using rule 11 (line -> group .)
    FCLOSE          reduce using rule 11 (line -> group .)


state 10

    (52) fdecl -> fovars . FUNCTION ID fivars group

    FUNCTION        shift and go to state 54


state 11

    (14) sent -> ID . EQ expr
    (53) fovars -> ID . EQ expr
    (74) access -> ID . OPEN expr COMA expr CLOSE
    (75) access -> ID . OPEN expr CLOSE
    (62) expr -> ID .

    EQ              shift and go to state 55
    OPEN            shift and go to state 56
    GTLT            reduce using rule 62 (expr -> ID .)
    OR              reduce using rule 62 (expr -> ID .)
    ES              reduce using rule 62 (expr -> ID .)


state 12

    (13) sent -> PRINT . ID

    ID              shift and go to state 57


state 13

    (18) sent -> expr .
    (65) expr -> expr . GTLT expr
    (66) expr -> expr . OR expr

    ES              reduce using rule 18 (sent -> expr .)
    FCLOSE          reduce using rule 18 (sent -> expr .)
    ELSE            reduce using rule 18 (sent -> expr .)
    GTLT            shift and go to state 58
    OR              shift and go to state 59


state 14

    (15) sent -> access . EQ expr
    (73) oper -> access .

    EQ              shift and go to state 60
    GTLT            reduce using rule 73 (oper -> access .)
    OR              reduce using rule 73 (oper -> access .)
    ES              reduce using rule 73 (oper -> access .)
    FCLOSE          reduce using rule 73 (oper -> access .)
    ELSE            reduce using rule 73 (oper -> access .)


state 15

    (16) sent -> EXTEND1 . ID expr

    ID              shift and go to state 61


state 16

    (17) sent -> EXTEND2 . ID expr expr

    ID              shift and go to state 62


state 17

    (19) sent -> UNDO .

    ES              reduce using rule 19 (sent -> UNDO .)
    FCLOSE          reduce using rule 19 (sent -> UNDO .)
    ELSE            reduce using rule 19 (sent -> UNDO .)


state 18

    (76) logic -> cond .

    ES              reduce using rule 76 (logic -> cond .)
    FCLOSE          reduce using rule 76 (logic -> cond .)


state 19

    (77) logic -> loop .

    ES              reduce using rule 77 (logic -> loop .)
    FCLOSE          reduce using rule 77 (logic -> loop .)


state 20

    (85) fcall -> SOPEN . vars SCLOSE EQ ID OPEN pars CLOSE
    (54) fovars -> SOPEN . fvars SCLOSE
    (86) vars -> . ID COMA vars
    (87) vars -> . COMA vars
    (88) vars -> . access COMA vars
    (89) vars -> . access
    (90) vars -> . ID
    (91) vars -> .
    (56) fvars -> . ID EQ expr
    (57) fvars -> . ID EQ expr COMA fvars
    (58) fvars -> .
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

  ! reduce/reduce conflict for SCLOSE resolved using rule 58 (fvars -> .)
    ID              shift and go to state 64
    COMA            shift and go to state 66
    SCLOSE          reduce using rule 58 (fvars -> .)

  ! SCLOSE          [ reduce using rule 91 (vars -> .) ]

    vars                           shift and go to state 63
    fvars                          shift and go to state 65
    access                         shift and go to state 67

state 21

    (67) expr -> OPEN . expr CLOSE
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    ID              shift and go to state 69
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    expr                           shift and go to state 68
    oper                           shift and go to state 31
    access                         shift and go to state 70

state 22

    (24) decl -> 2ldecl .

    ES              reduce using rule 24 (decl -> 2ldecl .)
    FCLOSE          reduce using rule 24 (decl -> 2ldecl .)


state 23

    (25) decl -> 2adecl .

    ES              reduce using rule 25 (decl -> 2adecl .)
    FCLOSE          reduce using rule 25 (decl -> 2adecl .)


state 24

    (26) decl -> 1ldecl .

    ES              reduce using rule 26 (decl -> 1ldecl .)
    FCLOSE          reduce using rule 26 (decl -> 1ldecl .)


state 25

    (27) decl -> 1adecl .

    ES              reduce using rule 27 (decl -> 1adecl .)
    FCLOSE          reduce using rule 27 (decl -> 1adecl .)


state 26

    (28) decl -> lvdecl .

    ES              reduce using rule 28 (decl -> lvdecl .)
    FCLOSE          reduce using rule 28 (decl -> lvdecl .)


state 27

    (29) decl -> avdecl .

    ES              reduce using rule 29 (decl -> avdecl .)
    FCLOSE          reduce using rule 29 (decl -> avdecl .)


state 28

    (30) cdecl -> cldecl .

    ES              reduce using rule 30 (cdecl -> cldecl .)
    FCLOSE          reduce using rule 30 (cdecl -> cldecl .)


state 29

    (31) cdecl -> cadecl .

    ES              reduce using rule 31 (cdecl -> cadecl .)
    FCLOSE          reduce using rule 31 (cdecl -> cadecl .)


state 30

    (20) group -> FOPEN . lines line FCLOSE
    (21) group -> FOPEN . lines FCLOSE
    (22) lines -> . lines line es
    (23) lines -> .

    FCLOSE          reduce using rule 23 (lines -> .)
    PRINT           reduce using rule 23 (lines -> .)
    ID              reduce using rule 23 (lines -> .)
    EXTEND1         reduce using rule 23 (lines -> .)
    EXTEND2         reduce using rule 23 (lines -> .)
    UNDO            reduce using rule 23 (lines -> .)
    SOPEN           reduce using rule 23 (lines -> .)
    FOPEN           reduce using rule 23 (lines -> .)
    ACONST          reduce using rule 23 (lines -> .)
    LCONST          reduce using rule 23 (lines -> .)
    NOT             reduce using rule 23 (lines -> .)
    INCDEC          reduce using rule 23 (lines -> .)
    OPEN            reduce using rule 23 (lines -> .)
    IF              reduce using rule 23 (lines -> .)
    WHILE           reduce using rule 23 (lines -> .)
    L2ARR           reduce using rule 23 (lines -> .)
    A2ARR           reduce using rule 23 (lines -> .)
    L1ARR           reduce using rule 23 (lines -> .)
    A1ARR           reduce using rule 23 (lines -> .)
    LVAR            reduce using rule 23 (lines -> .)
    AVAR            reduce using rule 23 (lines -> .)
    CLVAR           reduce using rule 23 (lines -> .)
    CAVAR           reduce using rule 23 (lines -> .)
    MOVE            reduce using rule 23 (lines -> .)
    GET             reduce using rule 23 (lines -> .)
    PUSH            reduce using rule 23 (lines -> .)
    SIZE1           reduce using rule 23 (lines -> .)
    SIZE2           reduce using rule 23 (lines -> .)
    ES              reduce using rule 23 (lines -> .)

    lines                          shift and go to state 71

state 31

    (59) expr -> oper .

    GTLT            reduce using rule 59 (expr -> oper .)
    OR              reduce using rule 59 (expr -> oper .)
    ES              reduce using rule 59 (expr -> oper .)
    CLOSE           reduce using rule 59 (expr -> oper .)
    PRINT           reduce using rule 59 (expr -> oper .)
    ID              reduce using rule 59 (expr -> oper .)
    EXTEND1         reduce using rule 59 (expr -> oper .)
    EXTEND2         reduce using rule 59 (expr -> oper .)
    UNDO            reduce using rule 59 (expr -> oper .)
    FOPEN           reduce using rule 59 (expr -> oper .)
    ACONST          reduce using rule 59 (expr -> oper .)
    LCONST          reduce using rule 59 (expr -> oper .)
    NOT             reduce using rule 59 (expr -> oper .)
    INCDEC          reduce using rule 59 (expr -> oper .)
    OPEN            reduce using rule 59 (expr -> oper .)
    MOVE            reduce using rule 59 (expr -> oper .)
    GET             reduce using rule 59 (expr -> oper .)
    PUSH            reduce using rule 59 (expr -> oper .)
    SIZE1           reduce using rule 59 (expr -> oper .)
    SIZE2           reduce using rule 59 (expr -> oper .)
    DO              reduce using rule 59 (expr -> oper .)
    FUNCTION        reduce using rule 59 (expr -> oper .)
    COMA            reduce using rule 59 (expr -> oper .)
    FCLOSE          reduce using rule 59 (expr -> oper .)
    ELSE            reduce using rule 59 (expr -> oper .)
    SCLOSE          reduce using rule 59 (expr -> oper .)
    COMD            reduce using rule 59 (expr -> oper .)


state 32

    (60) expr -> ACONST .

    GTLT            reduce using rule 60 (expr -> ACONST .)
    OR              reduce using rule 60 (expr -> ACONST .)
    ES              reduce using rule 60 (expr -> ACONST .)
    CLOSE           reduce using rule 60 (expr -> ACONST .)
    PRINT           reduce using rule 60 (expr -> ACONST .)
    ID              reduce using rule 60 (expr -> ACONST .)
    EXTEND1         reduce using rule 60 (expr -> ACONST .)
    EXTEND2         reduce using rule 60 (expr -> ACONST .)
    UNDO            reduce using rule 60 (expr -> ACONST .)
    FOPEN           reduce using rule 60 (expr -> ACONST .)
    ACONST          reduce using rule 60 (expr -> ACONST .)
    LCONST          reduce using rule 60 (expr -> ACONST .)
    NOT             reduce using rule 60 (expr -> ACONST .)
    INCDEC          reduce using rule 60 (expr -> ACONST .)
    OPEN            reduce using rule 60 (expr -> ACONST .)
    MOVE            reduce using rule 60 (expr -> ACONST .)
    GET             reduce using rule 60 (expr -> ACONST .)
    PUSH            reduce using rule 60 (expr -> ACONST .)
    SIZE1           reduce using rule 60 (expr -> ACONST .)
    SIZE2           reduce using rule 60 (expr -> ACONST .)
    DO              reduce using rule 60 (expr -> ACONST .)
    FUNCTION        reduce using rule 60 (expr -> ACONST .)
    COMA            reduce using rule 60 (expr -> ACONST .)
    FCLOSE          reduce using rule 60 (expr -> ACONST .)
    ELSE            reduce using rule 60 (expr -> ACONST .)
    SCLOSE          reduce using rule 60 (expr -> ACONST .)
    COMD            reduce using rule 60 (expr -> ACONST .)


state 33

    (61) expr -> LCONST .

    GTLT            reduce using rule 61 (expr -> LCONST .)
    OR              reduce using rule 61 (expr -> LCONST .)
    ES              reduce using rule 61 (expr -> LCONST .)
    CLOSE           reduce using rule 61 (expr -> LCONST .)
    PRINT           reduce using rule 61 (expr -> LCONST .)
    ID              reduce using rule 61 (expr -> LCONST .)
    EXTEND1         reduce using rule 61 (expr -> LCONST .)
    EXTEND2         reduce using rule 61 (expr -> LCONST .)
    UNDO            reduce using rule 61 (expr -> LCONST .)
    FOPEN           reduce using rule 61 (expr -> LCONST .)
    ACONST          reduce using rule 61 (expr -> LCONST .)
    LCONST          reduce using rule 61 (expr -> LCONST .)
    NOT             reduce using rule 61 (expr -> LCONST .)
    INCDEC          reduce using rule 61 (expr -> LCONST .)
    OPEN            reduce using rule 61 (expr -> LCONST .)
    MOVE            reduce using rule 61 (expr -> LCONST .)
    GET             reduce using rule 61 (expr -> LCONST .)
    PUSH            reduce using rule 61 (expr -> LCONST .)
    SIZE1           reduce using rule 61 (expr -> LCONST .)
    SIZE2           reduce using rule 61 (expr -> LCONST .)
    DO              reduce using rule 61 (expr -> LCONST .)
    FUNCTION        reduce using rule 61 (expr -> LCONST .)
    COMA            reduce using rule 61 (expr -> LCONST .)
    FCLOSE          reduce using rule 61 (expr -> LCONST .)
    ELSE            reduce using rule 61 (expr -> LCONST .)
    SCLOSE          reduce using rule 61 (expr -> LCONST .)
    COMD            reduce using rule 61 (expr -> LCONST .)


state 34

    (63) expr -> NOT . expr
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    ID              shift and go to state 69
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    expr                           shift and go to state 72
    oper                           shift and go to state 31
    access                         shift and go to state 70

state 35

    (64) expr -> INCDEC . expr
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    ID              shift and go to state 69
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    expr                           shift and go to state 73
    oper                           shift and go to state 31
    access                         shift and go to state 70

state 36

    (78) cond -> IF . expr sent else
    (79) cond -> IF . expr group else
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    ID              shift and go to state 69
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    expr                           shift and go to state 74
    oper                           shift and go to state 31
    access                         shift and go to state 70

state 37

    (83) loop -> WHILE . expr DO sent
    (84) loop -> WHILE . expr DO group
    (59) expr -> . oper
    (60) expr -> . ACONST
    (61) expr -> . LCONST
    (62) expr -> . ID
    (63) expr -> . NOT expr
    (64) expr -> . INCDEC expr
    (65) expr -> . expr GTLT expr
    (66) expr -> . expr OR expr
    (67) expr -> . OPEN expr CLOSE
    (68) oper -> . MOVE
    (69) oper -> . GET
    (70) oper -> . PUSH
    (71) oper -> . SIZE1 ID
    (72) oper -> . SIZE2 ID expr
    (73) oper -> . access
    (74) access -> . ID OPEN expr COMA expr CLOSE
    (75) access -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 32
    LCONST          shift and go to state 33
    ID              shift and go to state 69
    NOT             shift and go to state 34
    INCDEC          shift and go to state 35
    OPEN            shift and go to state 21
    MOVE            shift and go to state 46
    GET             shift and go to state 47
    PUSH            shift and go to state 48
    SIZE1           shift and go to state 49
    SIZE2           shift and go to state 50

    expr                           shift and go to state 75
    oper                           shift and go to state 31
    access                         shift and go to state 70

state 38

    (42) 2ldecl -> L2ARR . ID
    (43) 2ldecl -> L2ARR . ID EQ SOPEN arrs SCLOSE

    ID              shift and go to state 76


state 39

    (44) 2adecl -> A2ARR . ID
    (45) 2adecl -> A2ARR . ID EQ SOPEN arrs SCLOSE

    ID              shift and go to state 77


state 40

    (38) 1ldecl -> L1ARR . ID
    (39) 1ldecl -> L1ARR . ID EQ SOPEN vals SCLOSE

    ID              shift and go to state 78


state 41

    (40) 1adecl -> A1ARR . ID
    (41) 1adecl -> A1ARR . ID EQ SOPEN vals SCLOSE

    ID              shift and go to state 79


state 42

    (34) lvdecl -> LVAR . ID
    (35) lvdecl -> LVAR . ID EQ expr

    ID              shift and go to state 80


state 43

    (36) avdecl -> AVAR . ID
    (37) avdecl -> AVAR . ID EQ expr

    ID              shift and go to state 81


state 44

    (32) cldecl -> CLVAR . ID EQ expr

    ID              shift and go to state 82


state 45

    (33) cadecl -> CAVAR . ID EQ expr

    ID              shift and go to state 83


state 46

    (68) oper -> MOVE .

    GTLT            reduce using rule 68 (oper -> MOVE .)
    OR              reduce using rule 68 (oper -> MOVE .)
    ES              reduce using rule 68 (oper -> MOVE .)
    CLOSE           reduce using rule 68 (oper -> MOVE .)
    PRINT           reduce using rule 68 (oper -> MOVE .)
    ID              reduce using rule 68 (oper -> MOVE .)
    EXTEND1         reduce using rule 68 (oper -> MOVE .)
    EXTEND2         reduce using rule 68 (oper -> MOVE .)
    UNDO            reduce using rule 68 (oper -> MOVE .)
    FOPEN           reduce using rule 68 (oper -> MOVE .)
    ACONST          reduce using rule 68 (oper -> MOVE .)
    LCONST          reduce using rule 68 (oper -> MOVE .)
    NOT             reduce using rule 68 (oper -> MOVE .)
    INCDEC          reduce using rule 68 (oper -> MOVE .)
    OPEN            reduce using rule 68 (oper -> MOVE .)
    MOVE            reduce using rule 68 (oper -> MOVE .)
    GET             reduce using rule 68 (oper -> MOVE .)
    PUSH            reduce using rule 68 (oper -> MOVE .)
    SIZE1           reduce using rule 68 (oper -> MOVE .)
    SIZE2           reduce using rule 68 (oper -> MOVE .)
    DO              reduce using rule 68 (oper -> MOVE .)
    FUNCTION        reduce using rule 68 (oper -> MOVE .)
    COMA            reduce using rule 68 (oper -> MOVE .)
    FCLOSE          reduce using rule 68 (oper -> MOVE .)
    ELSE            reduce using rule 68 (oper -> MOVE .)
    SCLOSE          reduce using rule 68 (oper -> MOVE .)
    COMD            reduce using rule 68 (oper -> MOVE .)


state 47

    (69) oper -> GET .
